Fixed vertical spacing on pages

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,11 +27,13 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100vh;
-  max-width: 100%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  height: 100vh;
+  width: 100%;
+}
+
+main {
 }
 
 
@@ -238,6 +240,7 @@ footer {
 /* Contact Page */
 // Remove redundant styles from here that are in main when finished
 .contact {
+  min-height: 100vh;
   height: 100%;
   display: grid; 
   row-gap: 50px;
